[package]
name = "list-k8s-images"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.98.0", features = ["derive", "runtime"] }
tokio = { version = "1.43.0", features = ["full"] }
